# OSRA---Open-Source-Repository-Analyzer-

./: .gitignore  README.md
.github/workflows/: backend.yml  frontend.yml
client/: index.html  package-lock.json  package.json
client/public/eda/: cluster_metadata.json  cluster_summary.csv
client/src/: App.tsx
client/src/components/dashboard/: OverviewCards.tsx  RepositoryChart.tsx
client/src/components/home/: SearchBar.tsx
client/src/components/layout/: Footer.tsx  Navbar.tsx
client/src/pages/: Analytics.tsx  Analyzer.tsx  Home.tsx
client/src/services/: api.ts
server/: .env.example  pyproject.toml
server/app/: main.py
server/app/api/: router.py
server/app/api/routes/: ml.py  repository.py
server/app/core/: config.py
server/app/schemas/: ml.py  repository.py
server/app/services/: github.py  ml_service.py
server/app/utils/: parser.py
server/ml/artifacts/: cluster_metadata.json  cluster_summary.csv  encoder.pkl  feature_columns.pkl  kmeans.pkl  scaler.pkl
server/ml/data/processed/: clustered_dataset.csv  feature_dataset.csv  processed_dataset.csv
server/ml/data/raw/: repositories.csv  repository_dataset.csv
server/ml/scripts/: cluster_analysis.py  collect_data.py  collect_repo.py  evaluate_model.py  feature_engineering.py  predict.py  preprocess.py  train_model.py
server/ml/utils/: feature_transformer.py
