[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "joblib>=1.5.3",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "tqdm>=4.68.4",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
pythonpath = ["."]
